--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,41 @@
-# Dependencies
-node_modules/
-/.pnp
-.pnp.js
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Testing
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
 /coverage
 
-# Next.js
+# next.js
 /.next/
 /out/
 
-# Production
+# production
 /build
 
-# Misc
+# misc
 .DS_Store
-*.tsbuildinfo
-next-env.d.ts
+*.pem
 
-# Environment variables
-.env*.local
-.env.production
-
-# Debug
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# IDEs
-.vscode/
-.idea/
+# env files (can opt-in for committing if needed)
+.env*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Logs
-logs
-*.log
-
-# Supabase
-.supabase/
-
-# Vercel
+# vercel
 .vercel
 
-# Stripe
-.stripe/
+# typescript
+*.tsbuildinfo
+next-env.d.ts
